css/main.css
html {
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: "Noto Sans", sans-serif;
  line-height: 1.5;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

[lang="ja"] {
  font-family: "Noto Sans JP", sans-serif;
  font-style: normal;
}

body {
  margin: 0;
  padding: 1rem;
}

img {
  width: 100%;
  display: block;
}

h1 {
  display: flex;
  flex-direction: column;
  margin: 0;
}

h1 i {
  display: flex;
  justify-content: center;
}

h1 span {
  display: flex;
  justify-content: center;
  font-size: 1.125rem;
}

header {
  display: flex;
  flex-direction: column;
  text-align: center;
}

ul {
  list-style: none;
  display: flex;
  justify-content: space-evenly;
  font-size: 1.125rem;
  padding: 0;
  margin-top: 0;
}

li a {
  color: #3783a3;
}

.intro {
  margin: 0;
  padding: 1rem 0;
  border-bottom: .2rem solid #e2e2e2;
  border-top: .2rem solid #e2e2e2;
  display: flex;
  flex-direction: column;
  text-align: center;
  grid-area: body;
}

.intro i {
  margin: 0 0 1rem;
  padding: 0 1rem;
}

.intro p {
  margin: 0 1rem;
  padding: 0 0 1rem;
}

div i {
  font-size: 2rem;
  margin: 1rem;
  padding: 0;
}

div p {
  margin: 0;
  padding: 1em;
}

main {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
    "banner banner banner"
    "body body body"
    "col1 col2 col3";
  grid-row-gap: 1rem;
  align-items: center;
  border-bottom: .2rem solid #e2e2e2;
}

main img {
  grid-area: banner;
  padding-bottom: .5rem;
}

section {
  grid-area: col1;
  grid-column: 1 / span 4;
  margin: 0;
  padding: .5rem 0;
}

h2 {
  display: grid;
  font-size: 1.5rem;
  margin-bottom: 0;
  padding-bottom: .5rem;
}

article span {
  font-size: 1rem;
}

article a {
  display: flex;
  border-radius: .3rem;
  margin: 1.5rem 0 1rem;
  text-decoration: none;
  outline: .2rem solid rgba(55, 131, 163, .3);
  color: #3783a3;
  padding: .5rem 1rem .6rem;
}

footer {
  margin: 0;
  text-align: center;
  font-size: .75rem;
  padding-top: 1rem;
}

@media only screen and (min-width: 38em) {

  section {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 1rem;
    margin: 0 1rem 0 0;
    padding: 0;
  }

  article {
    margin: 0;
    padding: 0;
    width: 100%;
  }

  header {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  h1 {
    margin-bottom: 1rem;
  }

  h1 i {
    justify-content: left;
  }

  li {
    padding: 0 1rem;
  }

  .intro {
    margin: 0 2rem .5rem;
  }

}

